# course_project_ros2

./: .gitignore  Dockerfile  README.md  build_docker.sh  new_terminal.sh  run_docker.sh  ссылка_на_проект.txt
log/: latest_build
src/bcr_bot/: CMakeLists.txt  package.xml
src/bcr_bot/scripts/: goal_publisher.py
